[package]
name = "amap-find"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.10.5"
scraper = "0.19.0"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
html2text = "0.12.5"
